--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -310,7 +310,7 @@
             <p class="paragraph">
               <a class="slight-bold">Speaker:</a>
               <a class="item-subtitle link-style-black"
-                                   href="https://gdasoulas.github.io/"
+                 href="https://gdasoulas.github.io/"
                  target="_blank">George Dasoulas</a>, who is a final year PhD
               student in both the Data Science and Mining group at the Ecole Polytechnique and Noah’s Ark Lab of Huawei
               Technologies France. Under the supervision of Prof. Michalis Vazirgiannis, he works in the field of Graph
@@ -318,8 +318,9 @@
               theoretical understanding of GNN architectures, his goal is to make impactful contributions to real-world
               problems that are characterized by an inherent graph structure ranging from communication graphs to
               molecular networks. Dr. <a class="item-subtitle link-style-black"
-                                   href="https://scholar.google.com/citations?user=OfT4ns8AAAAJ&hl=en"
-                                         target="_blank">Johannes Lutzeyer</a> is currently a postdoctoral researcher in the Data Science and
+                                         href="https://scholar.google.com/citations?user=OfT4ns8AAAAJ&hl=en"
+                                         target="_blank">Johannes Lutzeyer</a> is currently a postdoctoral researcher in
+              the Data Science and
               Mining group at the Ecole Polytechnique. He works in the field of Graph Representation Learning with a
               focus on Graph Neural Networks and their theoretical analysis. He completed his PhD thesis at Imperial
               College London, where he studied the spectral properties of different graph representation matrices such
@@ -455,6 +456,98 @@
               GPN and a strong set of baselines on semi-supervised node classification including detection of anomalous
               features, and detection of left-out classes. GPN outperforms existing approaches for uncertainty
               estimation in the experiments.
+            </p>
+          </div>
+
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                22nd of February 2022
+              </div>
+            </div>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+              Maybe you? If you want to present a paper (doesn't have to be yours) or you have someone who might be
+              interested in presenting his work then just write me a message on
+              <a href="https://join.slack.com/t/logag/shared_invite/zt-u0mbo1ec-zElmvd1oSCXGjXvxLSokvg" target="_blank"
+                 class="link-style-green">Slack</a>
+              or via email!
+            </p>
+          </div>
+
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+              <h3>
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2111.12128"
+                   target="_blank">
+                  On the Unreasonable Effectiveness of Feature propagation in Learning on Graphs with Missing Node
+                  Features (2021)
+                </a></h3>
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                1st of March 2022
+              </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Emanuele Rossi, Henry Kenlay, Maria I. Gorinova, Benjamin Paul Chamberlain, Xiaowen Dong, Michael
+                  Bronstein
+                </a>
+              </div>
+            </div>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+              First author <a
+              class="item-subtitle link-style-black"
+              href="https://www.emanuelerossi.co.uk/"
+              target="_blank">Emanuele Rossi</a> who is a Machine Learning Researcher at Twitter and a Ph.D.
+              student at Imperial College London, working on Graph Neural Networks and supervised by Prof. Michael
+              Bronstein. His research interests span a wide array of topics around graph neural networks, including
+              scalability, dynamic graphs, and learning with missing node features. Before his current position,
+              Emanuele was working at Fabula AI, which was then acquired by Twitter in June 2019. Previously, he
+              completed an MPhil at the University of Cambridge and a BEng at Imperial College London, both in Computer
+              Science.
+            </p>
+            <p class="no-margin">
+              <a class="slight-bold">Abstract:</a>
+              While Graph Neural Networks (GNNs) have recently become the de facto standard for modeling relational
+              data, they impose a strong assumption on the availability of the node or edge features of the graph. In
+              many real-world applications, however, features are only partially available; for example, in social
+              networks, age and gender are available only for a small subset of users. We present a general approach for
+              handling missing features in graph machine learning applications that is based on minimization of the
+              Dirichlet energy and leads to a diffusion-type differential equation on the graph. The discretization of
+              this equation produces a simple, fast and scalable algorithm which we call Feature Propagation. We
+              experimentally show that the proposed approach outperforms previous methods on seven common
+              node-classification benchmarks and can withstand surprisingly high rates of missing features: on average
+              we observe only around 4% relative accuracy drop when 99% of the features are missing. Moreover, it takes
+              only 10 seconds to run on a graph with ∼2.5M nodes and ∼123M edges on a single GPU.
+            </p>
+          </div>
+
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                8th of March 2022
+              </div>
+            </div>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+              Maybe you? If you want to present a paper (doesn't have to be yours) or you have someone who might be
+              interested in presenting his work then just write me a message on
+              <a href="https://join.slack.com/t/logag/shared_invite/zt-u0mbo1ec-zElmvd1oSCXGjXvxLSokvg" target="_blank"
+                 class="link-style-green">Slack</a>
+              or via email!
             </p>
           </div>
 
