--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -617,8 +617,8 @@
                   </div>
                   <p class="item-date-loc">
                     <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                    Dec 2021:
-                    Upcoming talk. Invited by Dr. Prudencio Tossou.
+                    Jan 2022:
+                    Molecular Modelling. Host: Dr. Prudencio Tossou
                   </p>
                   <p class="item-content">
                   </p>
@@ -634,8 +634,8 @@
                   </div>
                   <p class="item-date-loc">
                     <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                    Dec 2021:
-                    Upcoming talk. Invited by Fabrizio Frasca.
+                    Jan 2022:
+                    Host: Prof. Michael Bronstein and Fabrizio Frasca
                   </p>
                   <p class="item-content">
                   </p>
