--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -309,7 +309,7 @@
             </div>
             <p class="paragraph">
               <a class="slight-bold">Speaker:</a>
-              <a class="item-subtitle link-style-black"
+              Paper author <a class="item-subtitle link-style-black"
                  href="https://gdasoulas.github.io/"
                  target="_blank">George Dasoulas</a>, who is a final year PhD
               student in both the Data Science and Mining group at the Ecole Polytechnique and Noah’s Ark Lab of Huawei
@@ -597,8 +597,8 @@
               <p class="paragraph">
                 <a class="slight-bold">Resources:</a>
                 Daniele's <a class="item-subtitle link-style-black"
-                             href="https://hannes-stark.com/assets/NBFNetLoGaG.pdf"
-                             target="_blank">slides </a> are coming soon. (90 participants)
+                             href="https://hannes-stark.com/assets/2021-NeurIPS-graph-neural-cellular-automata-long.pdf"
+                             target="_blank">slides </a>. (90 participants)
               </p>
               <p class="paragraph">
                 <a class="slight-bold">Speaker:</a>
