--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -226,23 +226,43 @@
         <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
 
 
-
           <div class="item" fxLayout="column">
             <div fxLayout="row">
+              <h3>
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2110.14961"
+                   target="_blank">
+                  Roto-translated Local Coordinate Frames For Interacting Dynamical Systems (NeurIPS 2021)
+                </a></h3>
             </div>
             <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
               <div>
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 1st of February 2022
               </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Miltiadis Kofinas, Naveen Shankar Nagaraja, Efstratios Gavves
+                </a>
+              </div>
             </div>
             <p class="paragraph">
               <a class="slight-bold">Speaker:</a>
-              Maybe you? If you want to present a paper (doesn't have to be yours) or you have someone who might be
-              interested in presenting his work then just write me a message on
-              <a href="https://join.slack.com/t/logag/shared_invite/zt-u0mbo1ec-zElmvd1oSCXGjXvxLSokvg" target="_blank"
-                 class="link-style-green">Slack</a>
-              or via email!
+              Not author of the paper: Hannes Stärk. Hey, that's me :D
+            </p>
+            <p class="no-margin">
+              <a class="slight-bold">Abstract:</a>
+              Modelling interactions is critical in learning complex dynamical systems, namely systems of interacting
+              objects with highly non-linear and time-dependent behaviour. A large class of such systems can be
+              formalized as geometric graphs, i.e., graphs with nodes positioned in the Euclidean space given an
+              arbitrarily chosen global coordinate system, for instance vehicles in a traffic scene. Notwithstanding the
+              arbitrary global coordinate system, the governing dynamics of the respective dynamical systems are
+              invariant to rotations and translations, also known as Galilean invariance. As ignoring these invariances
+              leads to worse generalization, in this work we propose local coordinate frames per node-object to induce
+              roto-translation invariance to the geometric graph of the interacting dynamical system. Further, the local
+              coordinate frames allow for a natural definition of anisotropic filtering in graph neural networks.
+              Experiments in traffic scenes, 3D motion capture, and colliding particles demonstrate that the proposed
+              approach comfortably outperforms the recent state-of-the-art.
             </p>
           </div>
 
@@ -745,7 +765,7 @@
                 <a class="slight-bold">Resources:</a>
                 Their <a class="item-subtitle link-style-black"
                          href="https://hannes-stark.com/assets/2021-NeurIPS-graph-neural-cellular-automata-long.pdf"
-                         target="_blank">slides </a> are coming soon. (85 participants)
+                         target="_blank">slides </a>. (85 participants)
               </p>
               <p class="paragraph">
                 <a class="slight-bold">Speakers:</a>
